# rfdb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
benches/: graph_operations.rs  neo4j_comparison.rs
examples/: basic_usage.rs  migrate_neo4j.rs  test_persistence.rs
prebuilt/darwin-x64/: rfdb-server
scripts/: postinstall.js
src/: error.rs  lib.rs
src/datalog/: eval.rs  eval_explain.rs  mod.rs  parser.rs  tests.rs  types.rs
src/ffi/: engine_worker.rs  mod.rs  napi_bindings.rs  rust_parser.rs
src/graph/: engine.rs  id_gen.rs  mod.rs  traversal.rs
src/index/: mod.rs
src/storage/: delta.rs  mod.rs  segment.rs  string_table.rs  writer.rs  writer_old.rs
