[package]
name = "rfdb"
version = "0.1.0"
edition = "2021"
authors = ["Vadim Reshetnikov"]
description = "High-performance disk-backed graph engine for semantic code analysis"

[lib]
# Support both regular library and Node.js addon
crate-type = ["cdylib", "rlib"]

[dependencies]
# Zero-copy memory mapping
memmap2 = "0.9"

# Cryptographic hashing for deterministic IDs
blake3 = "1.5"

# Embedded KV store for secondary indexes
sled = "0.34"

# Parallel iteration
rayon = "1.10"

# System info for memory monitoring
sysinfo = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.3"  # MessagePack for RFDB server protocol

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Channels for worker thread
crossbeam-channel = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Signal handling for graceful shutdown
signal-hook = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Node.js FFI (optional, enabled with "napi" feature)
napi = { version = "2.16", optional = true, default-features = false, features = ["napi8"] }
napi-derive = { version = "2.16", optional = true }

# Rust source parsing for RustAnalyzer
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
regex-lite = "0.1"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
# neo4j = "0.5"  # TODO: Add when a current neo4j crate becomes available for benchmarks

[[bin]]
name = "rfdb-server"
path = "src/bin/rfdb_server.rs"

[[bench]]
name = "graph_operations"
harness = false

[[bench]]
name = "neo4j_comparison"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"
